--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -68,7 +68,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
@@ -97,5 +97,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
 </project>
