--- a/pom.xml
+++ b/pom.xml
@@ -580,5 +580,5 @@
     <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://gitlab.com/vitalijr2/mock-loggers</url>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
 </project>
