--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -73,7 +73,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
@@ -126,5 +126,5 @@
   <properties>
     <slf4j.version>2.0.17</slf4j.version>
   </properties>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
 </project>
