--- a/tinylog-writer/pom.xml
+++ b/tinylog-writer/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -80,7 +80,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
@@ -133,5 +133,5 @@
   <properties>
     <tinylog.version>2.7.0</tinylog.version>
   </properties>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
 </project>
