--- a/elf4j/pom.xml
+++ b/elf4j/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.0.1</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -77,7 +77,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
   </parent>
   <profiles>
     <profile>
@@ -130,5 +130,5 @@
   <properties>
     <elf4j.version>7.0.0</elf4j.version>
   </properties>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1</version>
 </project>
